--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -43,6 +43,7 @@
     }
 </style>
 <div class="row row-fix">
+    <div #logginAnchor></div>
     <div #dialogAnchor></div>
     <div #answerAnchor></div>
 </div>
