Akash:Count of question added and twitter sharing working correcly

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -10,13 +10,19 @@
     <meta property="og:description" content="Alta Perspectiva" />
     <meta property="og:url" content="http://www.altaperspectiva.com/home/tab/1" />
 
-    <meta property="og:image" content="https://altablob.blob.core.windows.net:443/caetgory/altaperspectiva-logo.png" />
+    <meta property="og:image" content="https://altablob.blob.core.windows.net:443/category/altaperspectiva-logo.png" />
     <meta property="og:image:type" content="png">
     <meta property="og:image:width" content="786">
     <meta property="og:image:height" content="600">
     <meta property="fb:app_id" content="663076630563421">
     <title>iHaz tu preguntas sobre negocios!</title>
-
+    <meta name="title" content="Alta Perspectiva" />
+    <meta name="description" content="Alta Perspectiva" />
+    <meta name="twitter:title" content="Test Twitter" />
+    <meta name="twitter:description" content="altaperspectiva.com" />
+    <meta name="twitter:domain" content="Alta Perspectiva" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image" content="https://altablob.blob.core.windows.net:443/category/altaperspectiva-logo.png" />
     @*<script src="~/js/main.js"></script>*@
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
