--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
     <ap-search placeBottom="top-fixed" *ngIf="!hideSearch"></ap-search>
     <div class="navbar-header">
         <div asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand logo">
-            <a routerLink="/"><img class="navbar-brand logo" src="../images/LOGO CUADRADO.png" /></a>
+            <a onclick="window.location.reload()"><img class="navbar-brand logo" src="../images/LOGO CUADRADO.png" /></a>
         </div>
     </div>
     <div class="navbar-collapse collapse">
