blog click on blog list problem fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/follower/follower.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/follower/follower.component.html
@@ -12,3 +12,4 @@
         <user-info [userObj]="usr"></user-info>
     </div>
 </div>
+<div class="hidden-xs" style="height:200px;position:relative;top:250px;"></div>
