--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/following/following.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/following/following.component.html
@@ -11,3 +11,4 @@
         <user-info [userObj]="usr"></user-info>
     </div>
 </div>
+<div class="hidden-xs" style="height:200px;position:relative;top:250px;"></div>
