--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -49,7 +49,7 @@
                              [closeOnClickOutside]="true">
                 <span></span>
                 <ul style="list-style-type: none;">
-                    <li *ngIf="isQuestion" style="list-style-type: none;width: 91px;">
+                    <li *ngIf="isQuestion && isQuestionEditable" style="list-style-type: none;width: 91px;">
                         <a (click)="questionEditClicked()">Editar</a>
                     </li>
                     <li style="list-style-type: none;">
