change password message fixed, image view broken fixed

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Manage/ChangePassword.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Manage/ChangePassword.cshtml
@@ -2,6 +2,11 @@
 @{
     ViewData["Title"] = "Change Password";
 }
+<style>
+    .form-horizontal {
+        height: 373px
+    }
+</style>
 
 <h2>@ViewData["Title"].</h2>
 
