--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -78,7 +78,7 @@
     </div>
     <div class="row row-fix category-header">
         <div class="pull-left">
-            <img align="left" class="img-rounded img-category" src="{{categorySelected?.image}}" />
+            <img align="left" class="img-rounded img-category" alt="img-category" src="{{categorySelected?.image}}" />
             <h2 class="category-title">
                 {{categorySelected?.name}}
             </h2>
