--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -162,7 +162,7 @@
 <div class="profile-info-container">
     <div class="col-md-3">
         <div class="profile-image-center">
-            <img class="profile-image" src="{{imageLink}}" />
+            <img class="profile-image" alt="User Image" src="{{imageLink}}" />
             <button type="button" name="documents" class="btn btn-default hidden-xs" (click)="onUploadClick()" *ngIf="isOwner"><!--Upload Image-->Foto de perfil</button>
         </div>
     </div>
