--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/answer-submit/answer-submit.component.html
@@ -42,10 +42,10 @@
         <h1>{{question.title}}</h1>
         <div class="row">
             <div class="img-container" *ngIf="!isAnonymous">
-                <img class="user-image" src="{{_logObj.user.imageUrl}}" />
+                <img class="user-image" alt="user-image" src="{{_logObj.user.imageUrl}}" />
             </div>
             <div class="img-container" *ngIf="isAnonymous">
-                <img class="user-image " src="../../../../profile/Anonymous.png" />
+                <img class="user-image" alt="user-image" src="../../../../profile/Anonymous.png" />
             </div>
             <div *ngIf="!isAnonymous" class="header-info">{{_logObj.user?.name}}{{_logObj.user?.occupassion?' '+_logObj.user?.occupassion:''}} </div>
             <div *ngIf="isAnonymous" class="header-info">Anonymous</div>
