--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
     <script src="~/libs/zone.js/dist/zone.js"></script>
     <script src="~/libs/reflect-metadata/Reflect.js"></script>
     <script src="~/libs/systemjs/dist/system.src.js"></script>*@
-    <script src="https://cdn.ckeditor.com/4.6.1/standard-all/ckeditor.js"></script>   
+    @*<script src="https://cdn.ckeditor.com/4.6.1/standard-all/ckeditor.js"></script>*@   
     <link href="https://cdn.quilljs.com/1.1.9/quill.snow.css" rel="stylesheet">
     <link href="https://cdn.quilljs.com/1.1.9/quill.bubble.css" rel="stylesheet">
     
