authorization  url string taken from config, removed hard code url from user question component

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPasswordConfirmation.cshtml
@@ -7,7 +7,7 @@
         <hr />
         <div class="form-group">
             <div class="col-md-10">
-                Tu contraseña ha sido restablecida. Por favor <a href="http://www.altaperspectiva.com/">Haga clic aquí para ingresar</a>.
+                Tu contraseña ha sido restablecida. Por favor <a href="@Startup.Url">Haga clic aquí para ingresar</a>.
             </div>
 
         </div>
