--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Shared/_Layout.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Shared/_Layout.cshtml
@@ -149,8 +149,8 @@
     </head>
 <body class="body-minHeight">
     <div class="navbar navbar-fixed-top nav-shadow">
-        <a href="http://www.altaperspectiva.com"><img class="logo" src="../images/LOGO CUADRADO.png" /></a>
-        <a href="http://www.altaperspectiva.com" class="navbar-brand">
+        <a href="@Startup.Url"><img class="logo" src="../images/LOGO CUADRADO.png" /></a>
+        <a href="@Startup.Url" class="navbar-brand">
             Alta Perspectiva
         </a>
     </div>
