user info less delted. comment user info style fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
@@ -53,7 +53,7 @@ a {
 
 .header-info {
     font-size: 12px;
-    margin-top: 10px;
-    margin-left: 70px;
+    padding-top: 5px;
+    margin-left: 45px;
     font-family: myriadpro-regular;
 }
