Akash:Debug mode added to staging server

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta property="og:site_name" content="altaperspectiva.com" />
     <meta property="og:title" content="Alta Perspectiva" />
     <meta property="og:description" content="Alta Perspectiva" />
-    <meta property="og:url" content="http://www.altaperspectiva.com/home/tab/1" />
+    <meta property="og:url" content="@Startup.Url" />
 
     <meta property="og:image" content="https://altablob.blob.core.windows.net:443/category/altaperspectiva-logo.png" />
     <meta property="og:image:type" content="png">
@@ -19,7 +19,7 @@
     <meta name="title" content="Alta Perspectiva" />
     <meta name="description" content="Alta Perspectiva" />
     <meta name="twitter:title" content="Test Twitter" />
-    <meta name="twitter:description" content="altaperspectiva.com" />
+    <meta name="twitter:description" content="@Startup.Url" />
     <meta name="twitter:domain" content="Alta Perspectiva" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="https://altablob.blob.core.windows.net:443/category/altaperspectiva-logo.png" />
