--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-details/question-details.component.html
@@ -116,11 +116,11 @@
             <hr />
             <textarea name="editBody" class="question-control" placeholder="Agrega detalle de tu pregunta - Optional" [(ngModel)]="editBody" [ngModelOptions]="{standalone: true}" rows="6" cols="86"></textarea>
             <div>
-                <button type="submit" class="btn btn-success fixed-height" [disabled]="!questionVM.form.valid">
+                <button type="submit" class="btn btn-success" [disabled]="!questionVM.form.valid">
                     <!--Update-->
                     Actualizar
                 </button>
-                <button type="button" class="btn btn-info fixed-height" (click)="onQuestionDetailClicked(false)">
+                <button type="button" class="btn btn-info" (click)="onQuestionDetailClicked(false)">
                     <!--Cancel-->
                     Cancelar
                 </button>
