Akash: Anonumous fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
     <meta name="title" content="Alta Perspectiva" />
     <meta name="description" content="Alta Perspectiva" />
     <meta name="twitter:title" content="Test Twitter" />
-    <meta name="twitter:description" content="@Startup.Url" />
-    <meta name="twitter:domain" content="Alta Perspectiva" />
+    <meta name="twitter:description" content="Hello" />
+    <meta name="twitter:domain" content="@Startup.Url" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="https://altablob.blob.core.windows.net:443/category/altaperspectiva-logo.png" />
     @*<script src="~/js/main.js"></script>*@
