--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -32,7 +32,7 @@
             <img class="social-image" id="img1" src="../images/facebooklogo.svg" />
         </a>
 
-        <a href="https://twitter.com/intent/tweet?text={{this.twitterShareTitle}}...&&Check out:{{questionObj.shareUrl}}"
+        <a href="https://twitter.com/intent/tweet?text={{this.twitterShareTitle}}&&Check out:{{questionObj.shareUrl}}"
            class="SHARE TWITTER"
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
             <img class="social-image" id="img2" src="../images/twitter.svg" />
