--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/dialog-modal/dialog.component.html
@@ -33,7 +33,7 @@
                     <div class="article-details">
                         <user-info [userObj]="question.bestAnswer?.userViewModel" [viewDate]="question.bestAnswer?.answerDate" [isAnonymous]="question.bestAnswer?.isAnonymous"></user-info>
                         <div class="pull-right">
-                            <a (click)="QuestionFollowing(question)">
+                            <a (click)="QuestionFollowing(question)" *ngIf ="!(question.bestAnswer?.isAnonymous == true)">
                                 <img [ngClass]="{ 'disabledFollowingImg': !isFollowing, 'enableFollowingImg': isFollowing  }" src="../../images/FollowingImage.svg"/>
                             </a>
                         </div>
