--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -26,7 +26,7 @@
                         <div><span class="fa fa-user"></span> <a (click)="gotoProfile()" for="contain" data-toggle="dropdown">Perfil <!--Profile--></a></div>
                     </div>
                     <div class="form-group">
-                        <div><span class="fa fa-key"></span> <a href="http://altaauth.azurewebsites.net/Manage/ChangePassword" for="contain"> Contraseña<!--Change Password--> </a></div>
+                        <div><span class="fa fa-key"></span> <a href="{{authUrl}}+ '/Manage/ChangePassword'" for="contain"> Contraseña<!--Change Password--> </a></div>
                     </div>
                     <div class="form-group">
                         <div><span class="fa fa-sign-out"></span> <a href="/signout" for="contain">Cerrar sesión <!--Sign Out--> </a></div>
