Change password show message

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Manage/Index.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Manage/Index.cshtml
@@ -18,6 +18,6 @@
 <div>
     <div class="form-control success-msg ">
         tu contraseña ha sido cambiada exitosamente
-        <a href='@Startup.Url'>Home</a>
+        <a href='@ViewBag.home'>Home</a>
     </div>
 </div>
