Akash: Like count bug fixed for questions

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/VirtualStore/Delete.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Areas/Admin/Views/VirtualStore/Delete.cshtml
@@ -63,7 +63,12 @@
             </dd>
 
         </dl>
-        <button id="btnDelete" class="btn btn-success">Delete</button>
+        <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+                <button id="btnDelete" class="btn btn-success">Delete</button>
+            </div>
+        </div>
+        
     </div>
-    @Model
 }
