--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -4,25 +4,9 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="altaperspectiva.com" />
-    <meta property="og:title" content="Alta Perspectiva" />
-    <meta property="og:description" content="Alta Perspectiva" />
-    <meta property="og:url" content="@Startup.Url" />
 
-    <meta property="og:image" content="https://altablob.blob.core.windows.net:443/category/altaperspectiva-logo.png" />
-    <meta property="og:image:type" content="png">
-    <meta property="og:image:width" content="786">
-    <meta property="og:image:height" content="600">
-    <meta property="fb:app_id" content="663076630563421">
     <title>iHaz tu preguntas sobre negocios!</title>
-    <meta name="title" content="Alta Perspectiva" />
-    <meta name="description" content="Alta Perspectiva" />
-    <meta name="twitter:title" content="Alta Perspectiva" />
-    <meta name="twitter:description" content="More on Alta Perspectiva" />
-    <meta name="twitter:domain" content="@Startup.Url" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="https://altablob.blob.core.windows.net:443/category/altaperspectiva-logo.png" />
+    
     @*<script src="~/js/main.js"></script>*@
     <!-- 1. Load libraries -->
     <!-- Polyfill(s) for older browsers -->
@@ -42,6 +26,7 @@
     @*======Toaster========*@
     <script src="~/libs/ng2-toastr/bundles/ng2-toastr.js"></script>
     <link href="~/libs/ng2-toastr/bundles/ng2-toastr.min.css" rel="stylesheet" />
+    <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
     @*<script>
         System.import('../js/main').catch(function (err) {
             console.error(err);
@@ -84,15 +69,11 @@
     </environment>
     @* =========webpack========= *@
     <script src="~/dist/polyfills.bundle.js"></script>
-
     <script src="~/dist/vendor.bundle.js"></script>
-
     <script src="~/dist/0.chunk.js"></script>
     <script src="~/dist/1.chunk.js"></script>
     <script src="~/dist/2.chunk.js"></script>
     <script src="~/dist/app.bundle.js"></script>
-
-    
     @RenderSection("scripts", required: false)
 </body>
 </html>
