--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -42,8 +42,12 @@
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
             <img class="social-image" id="img2" src="../images/twitter.svg" />
         </a>-->
-        <a href="http://www.linkedin.com/shareArticle?mini=true&url={{questionObj.shareUrl}}&title={{questionObj?.title}}&summary={{answerTagsRemoved}}&picture={{questionObj?.bestAnswer?.firstImageUrl}}"
+        <!--<a href="http://www.linkedin.com/shareArticle?mini=true&url={{questionObj.shareUrl}}&title={{questionObj?.title}}&summary={{answerTagsRemoved}}&picture={{questionObj?.bestAnswer?.firstImageUrl}}"
            onclick='window.open(this.href, "popupwindow", "width=800,height=500,left=200,top=5,scrollbars,toolbar=0,resizable");return false;' target="social">
+            <img class="social-image social-image-linkedin" id="img3" src="../images/linkedin.svg" />
+        </a>-->
+        <a 
+           (click)='socialShare()' target="social">
             <img class="social-image social-image-linkedin" id="img3" src="../images/linkedin.svg" />
         </a>
 
