Profile over flow issue fixed, spanish text changed, following follwer view issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/draft-answer/draft-answer.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/draft-answer/draft-answer.component.html
@@ -20,7 +20,7 @@
                           required name="answerField" #answerField="ngModel"></quill-editor>
         </div>
         <div style="text-align:left;">
-            <button type="button" (click)="publishAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Publish Answer</button>           
+            <button type="button" (click)="publishAnswer(question.id)" data-dismiss="modal" class="btn btn-primary">Publicar Respuesta</button>           
         </div>
     </form>
 </div>
