--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/profile-info/profile-info.component.html
@@ -195,7 +195,7 @@
             <!-- description -->
             <a *ngIf="(!credential.description && credential.description!='') && isOwner" (click)="showDescription = false"> <!--Write a description about yourself-->¿Cómo te describes?</a>
             <div class="description-info" id="description" [hidden]="(!showDescription)">                
-                <div [innerHTML]="credential.description"></div>
+                <div [innerHTML]="credential.description?credential.description:''"></div>
                 <a id="description-edit" *ngIf="isOwner"><span (click)="showDescription = false"><i class="fa fa-edit"></i><!--edit description-->Editar descripción</span> </a>
             </div>
             <div class="description-panel" [hidden]="showDescription" *ngIf="isOwner">
