--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Shared/_Layout.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Shared/_Layout.cshtml
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="es">
     <head>
-        <meta charset="utf-8" />
+        <meta http-equiv="content-type" content="text/html;charset=utf-8">
+        <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"] - AuthorizationServer</title>
 
