--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn && showUserInfo">
             <li><a href="/signin">Iniciar sesión <!--Log in--></a></li>
-            <li><a href="/signup">Regístrate <!--Register--></a></li>
+            <li><a href="/signin">Regístrate <!--Register--></a></li>
         </ul>
         <div class="nav navbar-right" *ngIf="_logObj.isLoggedIn && showUserInfo">
             <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
