Register view fixed, Answer dialogue text align fixed, Tab caraousel problem fixed, Home page gap removed

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Register.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 <style>
     .form-horizontal {
         border-radius: 10px;
-        height: 377px;
+        height: auto;
         margin-top: 4px;
         margin-right: 29px;
     }
