--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -13,7 +13,7 @@
     <nav-bar hideSearch="true"></nav-bar>
     <ap-search placeBottom="bottom-float"></ap-search>
 </div>
-<div>
+<div style="margin-top:-75px;">
     <ap-tabs></ap-tabs>
 </div>
 
