--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/tabs/tabs.component.html
@@ -3,7 +3,7 @@
         <div class="tab-header-col-md-1 left-arrow"> <a class="arrow-sign" (click)="rightclick()"><span class="icon-arrow-left"></span></a></div>
         <div class="tab-header-col-md-10">
             <div class="tabs-container" >
-                <div class="tabs" [ngStyle]="{'transition': 'all 1.5s ease','transform':translate}">
+                <div class="tabs" id="tabsContainer" [ngStyle]="{'transition': 'all 1.5s ease','transform':translate}">
                     <div class="tab" *ngFor="let category of categories" [ngClass]="{'active' : category.active}">
                         <a  (click)="selectTab(category.id,category.sequence)">
                             <span class="{{category.icon}}"><span class="tab-text">{{category.name}}</span> </span>
