--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/SocialShare/ShareAnswerInSocialMedia.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/SocialShare/ShareAnswerInSocialMedia.cshtml
@@ -9,9 +9,11 @@
     <meta property="og:description" content="@ViewBag.og_description" />
     <meta property="og:url" content="@ViewBag.og_url" />
     <meta property="og:image" content="@ViewBag.og_image" />
-    <meta property="og:image:type" content="png">
-    <meta property="og:image:width" content="560">
-    <meta property="og:image:height" content="292">
+    <meta property="og:image:url" content="@ViewBag.og_image" />
+    <meta property="og:image:secure_url" content="@ViewBag.og_image" />
+    @*<meta property="og:image:type" content="png">
+        <meta property="og:image:width" content="382">
+        <meta property="og:image:height" content="200">*@
     <meta property="fb:app_id" content="510199349333959">
 
     <meta name="title" content="@ViewBag.og_title" />
@@ -21,7 +23,6 @@
     <meta name="twitter:domain" content="@Startup.Url" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="@ViewBag.og_image" />
-
 
     <meta prefix="og: http://ogp.me/ns#" property="og:title" content="@ViewBag.og_title" />
     <meta prefix="og: http://ogp.me/ns#" property="og:type" content="article" />
