Answer view as detail in pop up, Image over  size style fixed,

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
@@ -51,7 +51,9 @@ a {
     color: #797575;
     text-align:justify;
 }
-
+.answer-text a{
+    color:#19a2de
+}
 .header-info {
     font-size: 12px;
     padding-top: 5px;
