--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/tab-panel.component.less
@@ -3,17 +3,21 @@
     float: left;
     margin-left: -7px;
 }
-.panel-article{
+
+.answer-text img {
+    width: auto;
+    float: right;
+    display: inline;
+    margin: 15px 0 0 15px;
 }
-.answer-text img{
-    width:100%;
-}
+
 .answer-img {
-        max-width: 150px;
-        max-height: 150px;
-        float: right;
-        margin-right: 20px;
-    }
+    max-width: 150px;
+    max-height: 150px;
+    float: right;
+    margin-right: 20px;
+}
+
 .menu-container {
     margin: 5px auto;
     width: 65%;
@@ -112,12 +116,14 @@ h5 {
 .question-title {
     flex-grow: 1;
 }
+
 @media only screen and (min-width: 768px) and (max-width:1000px) {
-    .center-width{
-        width:60%;
+    .center-width {
+        width: 60%;
     }
-    .left-panel{
-        width:17%;
+
+    .left-panel {
+        width: 17%;
     }
 }
 
