Answer anonymous fixed, Question anonymous fixed, Error redirection removed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/user-answer/user-answer.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/user-answer/user-answer.component.html
@@ -1,6 +1,14 @@
 ﻿<div class="modal-overlay-inside z-modal" *ngIf="isLoading">
     <div class="loader"></div>
 </div>
-<div  *ngFor="let question of questions">
-    <question-panel [question]="question"></question-panel>
+
+
+<div class="search-results"
+     infinite-scroll
+     infiniteScrollDistance="1"
+     infiniteScrollThrottle="100"
+     (scrolled)="onScroll()">
+    <div *ngFor="let question of questions">
+        <question-panel [question]="question"></question-panel>
+    </div>
 </div>
