Change password language fixed, User Profile count fixed, Dialouge style fixed

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Manage/ChangePassword.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Manage/ChangePassword.cshtml
@@ -1,42 +1,44 @@
 ﻿@model ChangePasswordViewModel
 @{
-    ViewData["Title"] = "Change Password";
+    ViewData["Title"] = "Cambia la contraseña";
 }
 <style>
     .form-horizontal {
-        height: 373px
+        height: 373px;
+        margin:auto;
+        max-width:655px;
     }
 </style>
 
 <h2>@ViewData["Title"].</h2>
 
 <form asp-controller="Manage" asp-action="ChangePassword" method="post" class="form-horizontal" role="form">
-    <h4>Change Password Form</h4>
+    <h4>Cambiar formulario de contraseña</h4>
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="OldPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <label asp-for="OldPassword" class="col-md-4 control-label"></label>
+        <div class="col-md-8">
             <input asp-for="OldPassword" class="form-control" />
             <span asp-validation-for="OldPassword" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="NewPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <label asp-for="NewPassword" class="col-md-4 control-label"></label>
+        <div class="col-md-8">
             <input asp-for="NewPassword" class="form-control" />
             <span asp-validation-for="NewPassword" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <label asp-for="ConfirmPassword" class="col-md-4 control-label"></label>
+        <div class="col-md-8">
             <input asp-for="ConfirmPassword" class="form-control" />
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-offset-4 col-md-8">
             <button type="submit" class="btn btn-default">Change password</button>
         </div>
     </div>
