--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -7,6 +7,9 @@
         max-width: 150px;
         color: #888585;
     }
+    .popover-panel {
+        overflow-wrap:break-word;
+    }
     .popover-panel ul{
         list-style:none;
         color: #888585;
