--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ForgotPassword.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ForgotPassword.cshtml
@@ -1,9 +1,9 @@
 ﻿@model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Olvidaste tu contraseña?";
 }
 
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 <div class="col-md-6 col-md-offset-3">
     <form asp-controller="Account" asp-action="ForgotPassword" method="post" class="form-horizontal" role="form">
         <h4>Ingresa tu correo electrónico.</h4>
