--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Register.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Register.cshtml
@@ -55,38 +55,41 @@
                         </h4>
                         ViewBag.Message = null;
                     }
+                    else
+                    {
+                        <div class="form-group">
+                            <div class="col-sm-offset-1 col-md-10">
+                                <input asp-for="Email" placeholder="Correo electrónico" class="form-control" id="email" />
+                                <span asp-validation-for="Email" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-1 col-md-10">
+                                <input asp-for="Password" placeholder="Contraseña" class="form-control" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-1 col-md-10">
+                                <input asp-for="ConfirmPassword" placeholder="Confirma tu contraseña" class="form-control" />
+                                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-1 col-md-8">
+                                <input type="checkbox" id="accept" onclick="acceptTerms()" />
+                                @*Accept Terms and conditions*@
+                                Acepto y he leído los <a href="http://altaperspectiva.com/conocemas/terminos-de-uso/" target="_blank">Términos y condiciones de uso</a> y <a href="http://altaperspectiva.com/conocemas/politicas-de-privacidad/" target="_blank">Politicas de privacidad</a>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-1 col-md-10">
+                                <button type="submit" class="btn btn-xm" id="register" disabled>@*Sign Up*@Regístrate</button>
+                            </div>
+                        </div>
+                    }
                 }
-                @*<div asp-validation-summary="All" class="text-danger"></div>*@
-                <div class="form-group">
-                    <div class="col-sm-offset-1 col-md-10">
-                        <input asp-for="Email" placeholder="Correo electrónico" class="form-control" id="email" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-1 col-md-10">
-                        <input asp-for="Password" placeholder="Contraseña" class="form-control" />
-                        <span asp-validation-for="Password" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-1 col-md-10">
-                        <input asp-for="ConfirmPassword" placeholder="Confirma tu contraseña" class="form-control" />
-                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-1 col-md-8">
-                        <input type="checkbox" id="accept" onclick="acceptTerms()" />
-                        @*Accept Terms and conditions*@
-                        Acepto y he leído los <a href="http://altaperspectiva.com/conocemas/terminos-de-uso/" target="_blank">Términos y condiciones de uso</a> y <a href="http://altaperspectiva.com/conocemas/politicas-de-privacidad/" target="_blank">Politicas de privacidad</a>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-1 col-md-10">
-                        <button type="submit" class="btn btn-xm" id="register" disabled>@*Sign Up*@Regístrate</button>
-                    </div>
-                </div>
+                
             </form>
         </section>
     </div>
