Authentication : registration error fixed, spanish language fixed, Anonymous new problem fixed, Some styling issue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -13,6 +13,7 @@
         color: #888585;
         font-size: 12px;
         line-height: 16.5px;
+        overflow-wrap:break-word;
     }
     top-user-info a:hover{
         outline: none;
