--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Manage/ChangePassword.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Manage/ChangePassword.cshtml
@@ -39,7 +39,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-4 col-md-8">
-            <button type="submit" class="btn btn-default">Change password</button>
+            <button type="submit" class="btn btn-default">Cambia la contraseña</button>
         </div>
     </div>
 </form>
