--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/components/question-details.less
@@ -54,6 +54,9 @@ a {
 .answer-text a{
     color:#19a2de
 }
+.answer-text p {
+    margin-bottom:auto;
+}
 .header-info {
     font-size: 12px;
     padding-top: 5px;
