--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/left-menu/topfive-user.component.html
@@ -14,6 +14,7 @@
         font-size: 12px;
         line-height: 16.5px;
         overflow-wrap:break-word;
+        word-break:break-all;
     }
     top-user-info a:hover{
         outline: none;
