--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/user-info/user-info.component.html
@@ -13,6 +13,7 @@
         font-size: 12px;
         line-height: 16.5px;
         overflow-wrap:break-word;
+        word-break:break-all;
     }
 </style>
 
